# isobar

./: .drone.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  azure-pipelines.yml  package.json  rust-toolchain  test.js  vsts.yml
.circleci/: config.yml
docs/architecture/: 001_client_server_protocol.md  002_shared_workspaces.md  003_epoch.md  003_era.md  003_live_repositories.md  003_nano_epochs.md  003_ocean.md  client_server_protocol.md  views.md
docs/updates/: 2018_04_02.md  2018_04_09.md  2018_04_16.md  2018_04_23.md  2018_04_30.md  2018_05_07.md  2018_05_14.md  2018_05_21.md  2018_05_28.md  2018_06_04.md  2018_06_11.md  2018_06_25.md  2018_07_16.md  2018_07_17.md  2018_07_23.md  2018_07_30.md  2018_08_07.md  2018_08_28.md  2018_09_04.md  2018_09_15.md  2018_09_21.md  2018_10_09.md
isobar-core/: Cargo.toml
isobar_browser/: README.md  package-lock.json  package.json
isobar_browser/lib/: client.js  server.js  ui.js
isobar_browser/script/: build  server
isobar_browser/src/: client.js  ui.js  worker.js
isobar_browser/static/: index.html
isobar_cli/: Cargo.toml  README.md
isobar_cli/src/: main.rs
isobar_core/: Cargo.toml  README.md  build.rs
isobar_core/benches/: bench.rs
isobar_core/src/: app.rs  buffer.rs  buffer_view.rs  discussion.rs  editor.rs  file_finder.rs  fs.rs  fuzzy.rs  fuzzy_search.rs  lib.rs  notify_cell.rs  peer.rs  project.rs  repository.rs  rpc.rs  stream_ext.rs  tree.rs  wasm_logging.rs  window.rs  workspace.rs
isobar_core/src/rpc/: client.rs  mod.rs  server.rs
isobar_core_node/: Cargo.toml  README.md  package.json  test.js
isobar_core_node/scripts/: build.js
isobar_core_node/src/: lib.rs
isobar_electron/: README.md  index.html  package-lock.json  package.json
isobar_node/: Cargo.toml  README.md  isobar.d.ts  package-lock.json  package.json  test.js
isobar_server/: Cargo.toml  README.md
isobar_server/src/: app.rs  fs.rs  main.rs  messages.rs  server.rs  window.rs  workspace.rs
isobar_ui/: README.md  package-lock.json  package.json
isobar_wasm/: Cargo.toml  package-lock.json  package.json
isobar_wasm/lib/: main.js
isobar_wasm/script/: build  test
isobar_wasm/src/: lib.rs
isobar_wasm/test/: server.test.js  tests.js
isobar_web/: package-lock.json  package.json
nano/: Cargo.toml  README.md
nano_core/: Cargo.toml  README.md  nano.proto
nano_core/script/: compile_protobuf
nano_core/src/: btree.rs  buffer.rs  epoch.rs  lib.rs  message.rs  time.rs  work_tree.rs
nano_core/src/serialization/: schema.fbs  schema_generated.rs
nano_js/: Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
nano_js/script/: build
nano_js/src/: index.ts  index2.ts.bak  lib.rs  support.ts
nano_js/test/: tests.js  tests.ts
nano_wasm/: Cargo.toml  package-lock.json  package.json  webpack.config.js
napi/: Cargo.toml  README.md  build.rs  lib.rs  package.json
ocean/: .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md
proton-core/: Cargo.toml
script/: bench  build  build.js  isobar  isobar_debug  test
scripts/: build.js  test  test.bash
src/: binding.c  buffer.rs  fs.rs  id.rs  lib.rs  tree.rs
(+56 files in other folders)
