[package]
name = "isobar_server"
version = "0.1.0"
authors = ["Vlad Hashimoto <ukrgametactics@ex.ua>"]

[dependencies]
bytes = "0.4"
futures = "0.1"
rand = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-process = "0.1"
tokio-uds = "0.1"
isobar_core = {path = "../isobar_core"}
