[package]
name = "isobar_wasm"
version = "0.1.0"
authors = ["Josh Cooper <ugtstreamer@ex.ua>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
bytes = "0.4"
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
wasm-bindgen = "0.2"
isobar_core = { path = "../isobar_core" }

[features]
js-tests = []
