[package]
name = "nano_core"
version = "0.1.0"
authors = ["Josh Cooper <ugtstreamer@ex.ua>", "Vlad Hashimoto <hashimoto.stream@gmail.com>"]

[dependencies]
futures = "0.1"
lazy_static = "1.0"
parking_lot = "0.6"
smallvec = "0.6.1"
uuid = { version = "0.6", features = ["v4"] }

[dev-dependencies]
futures-cpupool = "0.1"
rand = "0.3"
