[package]
name = "nano_js"
version = "0.1.0"
authors = ["Josh Cooper <ugtstreamer@ex.ua>", "Vlad Hashimoto <hashimoto.stream@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.9"
bincode = "1.0"
js-sys = "0.2"
nano_core = { path = "../nano_core" }
serde = "1.0"
serde_derive = "1.0"

[dependencies.wasm-bindgen]
version = "0.2.21"
features = ["serde-serialize"]
