[package]
name = "nano_js"
version = "0.1.0"
authors = ["Josh Cooper <ugtstreamer@ex.ua>", "Vlad Hashimoto <hashimoto.stream@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.9"
bincode = "1.0"
futures = "0.1"
js-sys = "0.3"
nano_core = { path = "../nano_core" }
serde = "1.0"
serde_derive = "1.0"
wasm-bindgen-futures = "0.3"

[dependencies.wasm-bindgen]
version = "0.2.25"
features = ["serde-serialize"]
